--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -9,10 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HabitatHunt</title>
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 
 
-    <link rel="stylesheet" href="https://flowbite-admin-dashboard.vercel.app//app.css">
+    {% compress css %}
+    <link rel="stylesheet" href="{% static 'css/output.css' %}">
+    {% endcompress %}
 
     <script>
 
@@ -26,7 +27,6 @@
 </head>
 
 <body class="bg-gray-50 dark:bg-gray-800">
-
     {% block content %}
     {% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
